--- a/index.html
+++ b/index.html
@@ -208,6 +208,13 @@
               </ul>
             </div>
           </div>
+
+
+          <div class="block-points-pictures__inner" style='justify-content: flex-start'>
+            <img src="img/АКП-1.png" alt="" />
+            <img src="img/АКП-2.png" alt="" />
+          </div>
+
         </div>
 
         <div class="vertical-rl">
@@ -492,7 +499,7 @@
             </p>
           </div>
 
-          <div class="block-points-pictures__inner">
+          <div class="block-points-pictures__inner" style='justify-content: flex-start'>
             <img src="img/Склад-1.png" alt="" />
           </div>
         </div>
@@ -513,6 +520,7 @@
         </div>
 
         <div class="block-points__inner">
+
           <img src="img/Лаборатория.png" alt="" />
 
           <div class="block-points">
@@ -536,6 +544,9 @@
               </li>
             </ul>
           </div>
+
+          <img src="img/Лаборатория-1.png" alt="" />
+
         </div>
       </div>
     </section>
@@ -615,7 +626,7 @@
           <div class="block_header">
             Политика в области охраны труда<span>оборудование</span>
           </div>
-          <div class="block-points__inner">
+          <div class="block-text__inner">
             <p>
               В Политике ООО «НПО Лаборатория специальных сталей и сплавов» в
               области охраны труда, промышленной и экологической безопасности,
@@ -676,7 +687,7 @@
           <div class="block_header">
             Экологическая политика<span>оборудование</span>
           </div>
-          <div class="block-points__inner">
+          <div class="block-text__inner">
             <p>
               К числу главных целей и задач ООО «НПО Лаборатория специальных
               сталей и сплавов» в области экологии отнесены: - управление
