--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <div class="container-header">
         <ul class="header__items header__items-top">
           <li>
-            <div class="header__item">Процесс производства</div>
+            <div class="header__item first">Технологии производства</div>
           </li>
 
           <li>
-            <div class="header__item">Эффективное производство</div>
+            <div class="header__item second">Эффективное производство</div>
           </li>
         </ul>
         <h1 class="site__title">
@@ -25,11 +25,11 @@
         </h1>
         <ul class="header__items header__items-bottom">
           <li>
-            <div class="header__item">Охрана труда</div>
+            <div class="header__item third">Охрана труда</div>
           </li>
 
           <li>
-            <div class="header__item">Экологическая политика</div>
+            <div class="header__item fourth">Экологическая политика</div>
           </li>
         </ul>
       </div>
@@ -634,40 +634,98 @@
               задачи предприятия, установлен приоритет обеспечения жизни и
               здоровья работников, сохранности окружающей среды по отношению к
               результатам производственной деятельности. Политика предприятия
-              заключается в следующем: «Мы считаем, что безопасный труд,
-              безаварийное производство, сохранность окружающей среды и
-              рациональное использование природных ресурсов является основой
-              успехов в бизнесе. Наша цель - работа без происшествий: Мы
-              стремимся исключить любые происшествия, способные нанести вред
-              здоровью людей, производству или окружающей среде. Мы принимаем на
-              себя обязательства: · соблюдать все применимые к нашей
-              деятельности требования законодательства и бизнес-сообщества; ·
-              развивать и эффективно применять системы управления в области
-              охраны труда, промышленной и экологической безопасности; · не
-              допускать опасные действия персонала и создания опасных условий
-              при выполнении любой работы; · предотвращать загрязнение
-              окружающей среды; · обучать наших сотрудников безопасной и
-              безаварийной работе, обеспечивать их эффективными средствами
-              индивидуальной и коллективной защиты. Постоянные улучшения: Все
-              наши руководители ответственны за постоянные улучшения в области
-              охраны труда, промышленной и экологической безопасности при
-              осуществлении ими производственной деятельности. Мы принимаем на
-              себя обязательства: · совершенствовать управление в области охраны
-              труда, промышленной и экологической безопасности; · разрабатывать
-              и выполнять планы по улучшению условий труда, санитарно-бытовых
-              условий, обеспечения промышленной и экологической безопасности; ·
-              совершенствовать технологические процессы и оборудование для
-              снижения производственных рисков, а также воздействия на
-              окружающую среду; · эффективно мотивировать наших сотрудников к
-              безопасному поведению, безопасной работе и ведению здорового
-              образа жизни; · обеспечивать готовность персонала к действиям по
-              локализации аварийных ситуаций. Мы ожидаем от всех наших
-              сотрудников: · безопасного поведения на территории предприятия; ·
-              поддержания безопасности на своих рабочих местах и сохранности
-              окружающей среды; · активного участия в оценке рисков и реализации
-              мероприятий по их устранению; · немедленного информирования
-              руководства обо всех происшествиях на производстве.»
-            </p>
+              заключается в следующем:
+              <p>
+                «Мы считаем, что безопасный труд, безаварийное производство, сохранность окружающей среды и рациональное использование природных ресурсов является основой успехов в бизнесе.
+              </p>
+              <p>
+                Наша цель - работа без происшествий:
+              </p>
+              <p>
+                Мы стремимся исключить любые происшествия, способные нанести вред здоровью людей, производству или окружающей среде.
+              </p>
+              <p>
+                Мы принимаем на себя обязательства:
+              </p>
+              <ul class='block-text__list'>
+                <li>
+                  соблюдать все применимые к нашей деятельности требования законодательства и бизнес-сообщества;
+                </li>
+                <li>
+                  развивать и эффективно применять системы управления в области охраны труда, промышленной и экологической безопасности;
+                </li>
+                <li>
+                  не
+                  допускать опасные действия персонала и создания опасных условий
+                  при выполнении любой работы;
+                </li>
+                <li>
+                  предотвращать загрязнение
+                  окружающей среды;
+                </li>
+                <li>
+                  обучать наших сотрудников безопасной и
+                  безаварийной работе, обеспечивать их эффективными средствами
+                  индивидуальной и коллективной защиты.
+                </li>
+              </ul>
+              <p>
+                Постоянные улучшения:
+              </p>
+              <p>
+                Все наши руководители ответственны за постоянные улучшения в области
+                охраны труда, промышленной и экологической безопасности при
+                осуществлении ими производственной деятельности.
+              </p>
+              <p>
+                Мы принимаем на
+                себя обязательства:
+              </p>
+              <ul class='block-text__list'>
+                <li>
+                  совершенствовать управление в области охраны
+                  труда, промышленной и экологической безопасности;
+                </li>
+                <li>
+                  разрабатывать
+                  и выполнять планы по улучшению условий труда, санитарно-бытовых
+                  условий, обеспечения промышленной и экологической безопасности;
+                </li>
+                <li>
+                  совершенствовать технологические процессы и оборудование для
+                  снижения производственных рисков, а также воздействия на
+                  окружающую среду;
+                </li>
+                <li>
+                  эффективно мотивировать наших сотрудников к
+                  безопасному поведению, безопасной работе и ведению здорового
+                  образа жизни;
+                </li>
+                <li>
+                  обеспечивать готовность персонала к действиям по
+                  локализации аварийных ситуаций.
+                </li>
+              </ul>
+              <p>
+                Мы ожидаем от всех наших сотрудников:
+              </p>
+              <ul class='block-text__list'>
+                <li>
+                  безопасного поведения на территории предприятия;
+                </li>
+                <li>
+                  поддержания безопасности на своих рабочих местах и сохранности
+                  окружающей среды;
+                </li>
+                <li>
+                  активного участия в оценке рисков и реализации
+                  мероприятий по их устранению;
+                </li>
+                <li>
+                  немедленного информирования
+                  руководства обо всех происшествиях на производстве.»
+                </li>
+              </ul>
           </div>
         </div>
 
@@ -690,34 +748,62 @@
           <div class="block-text__inner">
             <p>
               К числу главных целей и задач ООО «НПО Лаборатория специальных
-              сталей и сплавов» в области экологии отнесены: - управление
-              ресурсами с учетом рисков в области охраны труда и экологии; -
-              последовательное, независимо от динамики производства, сокращение
-              количества выбросов, сбросов загрязняющих веществ и отходов, их
-              токсичности за счет использования природоохранных технологий,
-              оборудования и методов управления, раздельный сбор отходов для
-              дальнейшего вторичного использования; - постоянное повышение
-              квалификации работников в области охраны труда и экологии; -
-              обеспечение готовности персонала к действиям по локализации
-              аварийных ситуаций; - привлечение работников к активному участию в
-              создании и обеспечении здоровых и безопасных условий труда,
-              ресурсосбережении и природоохранных мероприятиях путем
-              соответствующих мер мотивации и развития социального партнерства.
+              сталей и сплавов» в области экологии отнесены:
+            </p>
+            <ul class='block-text__list'>
+              <li>
+                управление
+                ресурсами с учетом рисков в области охраны труда и экологии;
+              </li>
+              <li>
+                последовательное, независимо от динамики производства, сокращение
+                количества выбросов, сбросов загрязняющих веществ и отходов, их
+                токсичности за счет использования природоохранных технологий,
+                оборудования и методов управления, раздельный сбор отходов для
+                дальнейшего вторичного использования;
+              </li>
+              <li>
+                постоянное повышение
+                квалификации работников в области охраны труда и экологии;
+              </li>
+              <li>
+                обеспечение готовности персонала к действиям по локализации
+                аварийных ситуаций;
+              </li>
+              <li>
+                привлечение работников к активному участию в
+                создании и обеспечении здоровых и безопасных условий труда,
+                ресурсосбережении и природоохранных мероприятиях путем
+                соответствующих мер мотивации и развития социального партнерства.
+              </li>
+            </ul>
+             <p>
               Для решения поставленных задач ООО «НПО Лаборатория специальных
               сталей и сплавов» последовательно проводит комплекс мероприятий, в
-              том числе: - ведется постоянный мониторинг состояния экологической
-              безопасности предприятия. Определена санитарно-защитная зона
-              (СЗЗ), и ведется контроль выбросов по двум точкам, расположенным
-              на границе СЗЗ и зоны жилой застройки. Систематически
-              контролируется соответствие выбросов в атмосферу предельно
-              допустимым нормам; - организованы контроль за содержанием
-              временных мест накопления отходов и учет отходов. Отходы
-              еженедельно вывозятся и передаются лицензированным организациям
-              или на вторичное использование; - осуществляется систематическая
-              уборка территории предприятия с тем, чтобы минимизировать
-              попадание загрязняющих веществ в канализационные сети ГК
-              «Кировский завод».
-            </p>
+              том числе:
+             </p>
+             <ul class='block-text__list'>
+              <li>
+                ведется постоянный мониторинг состояния экологической
+                безопасности предприятия. Определена санитарно-защитная зона
+                (СЗЗ), и ведется контроль выбросов по двум точкам, расположенным
+                на границе СЗЗ и зоны жилой застройки. Систематически
+                контролируется соответствие выбросов в атмосферу предельно
+                допустимым нормам;
+              </li>
+              <li>
+                организованы контроль за содержанием
+                временных мест накопления отходов и учет отходов. Отходы
+                еженедельно вывозятся и передаются лицензированным организациям
+                или на вторичное использование;
+              </li>
+              <li>
+                осуществляется систематическая
+                уборка территории предприятия с тем, чтобы минимизировать
+                попадание загрязняющих веществ в канализационные сети ГК
+                «Кировский завод».
+              </li>
+             </ul>
           </div>
         </div>
 
