--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="block-points__inner">
-          <p>
+          <p class='p--left'>
             В 2019-2020 годах на АО «Металлургический завод «Петросталь»
             произведено техническое переоснащение существующего производства. В
             результате реализации этого проекта создан новый металлургический
@@ -67,7 +67,7 @@
 
         <div class="block-points__inner">
           <img src="img/manuf.png" alt="" />
-          <p>
+          <p class='p--right'>
             В 2019-2020 годах на АО «Металлургический завод «Петросталь»
             произведено техническое переоснащение существующего производства. В
             результате реализации этого проекта создан новый металлургический
@@ -209,12 +209,13 @@
             </div>
           </div>
 
-
-          <div class="block-points-pictures__inner" style='justify-content: flex-start'>
+          <div
+            class="block-points-pictures__inner"
+            style="justify-content: flex-start"
+          >
             <img src="img/АКП-1.png" alt="" />
             <img src="img/АКП-2.png" alt="" />
           </div>
-
         </div>
 
         <div class="vertical-rl">
@@ -489,19 +490,25 @@
           </div>
           <div class="block-points__inner">
             <img src="img/Склад.png" alt="" />
-            <p>
+            <p class='p--right'>
               Слитки открытой дуговой выплавки и электрошлакового переплава
               подвергают контролю качества боковой поверхности и локальной
-              зачистке дефектов Зачистка дефектов производится выплавкой (огнём)
-              или обдиркой на подвесном обдирочно-шлифовальном станке На слитках
-              ЭШП дополнительно производится удаление донной и, при
-              необходимости, головной части
+              зачистке дефектов.
             </p>
           </div>
 
-          <div class="block-points-pictures__inner" style='justify-content: flex-start'>
+
+          <div class="block-points__inner">
+            <p class='p--left'>
+              Зачистка дефектов производится выплавкой (огнём)
+              или обдиркой на подвесном обдирочно-шлифовальном станке На слитках
+              ЭШП дополнительно производится удаление донной и, при
+              необходимости, головной части.
+            </p>
             <img src="img/Склад-1.png" alt="" />
+            
           </div>
+         
         </div>
 
         <div class="vertical-rl">
@@ -520,7 +527,6 @@
         </div>
 
         <div class="block-points__inner">
-
           <img src="img/Лаборатория.png" alt="" />
 
           <div class="block-points">
@@ -546,7 +552,6 @@
           </div>
 
           <img src="img/Лаборатория-1.png" alt="" />
-
         </div>
       </div>
     </section>
@@ -558,7 +563,7 @@
         </div>
 
         <div class="block-points__inner">
-          <p>
+          <p class='p--left'>
             Предприятие полностью самостоятельно обеспечивается расходуемыми
             электродами для электрошлакового переплава из любых сталей и
             сплавов. Постоянное совершенствование технологии производства стали
@@ -626,7 +631,7 @@
           <div class="block_header">
             Политика в области охраны труда<span>оборудование</span>
           </div>
-          <div class="block-text__inner">
+          <div class="block-text__inner p--left">
             <p>
               В Политике ООО «НПО Лаборатория специальных сталей и сплавов» в
               области охраны труда, промышленной и экологической безопасности,
@@ -635,97 +640,86 @@
               здоровья работников, сохранности окружающей среды по отношению к
               результатам производственной деятельности. Политика предприятия
               заключается в следующем:
-              <p>
-                «Мы считаем, что безопасный труд, безаварийное производство, сохранность окружающей среды и рациональное использование природных ресурсов является основой успехов в бизнесе.
-              </p>
-              <p>
-                Наша цель - работа без происшествий:
-              </p>
-              <p>
-                Мы стремимся исключить любые происшествия, способные нанести вред здоровью людей, производству или окружающей среде.
-              </p>
-              <p>
-                Мы принимаем на себя обязательства:
-              </p>
-              <ul class='block-text__list'>
-                <li>
-                  соблюдать все применимые к нашей деятельности требования законодательства и бизнес-сообщества;
-                </li>
-                <li>
-                  развивать и эффективно применять системы управления в области охраны труда, промышленной и экологической безопасности;
-                </li>
-                <li>
-                  не
-                  допускать опасные действия персонала и создания опасных условий
-                  при выполнении любой работы;
-                </li>
-                <li>
-                  предотвращать загрязнение
-                  окружающей среды;
-                </li>
-                <li>
-                  обучать наших сотрудников безопасной и
-                  безаварийной работе, обеспечивать их эффективными средствами
-                  индивидуальной и коллективной защиты.
-                </li>
-              </ul>
-              <p>
-                Постоянные улучшения:
-              </p>
-              <p>
-                Все наши руководители ответственны за постоянные улучшения в области
-                охраны труда, промышленной и экологической безопасности при
-                осуществлении ими производственной деятельности.
-              </p>
-              <p>
-                Мы принимаем на
-                себя обязательства:
-              </p>
-              <ul class='block-text__list'>
-                <li>
-                  совершенствовать управление в области охраны
-                  труда, промышленной и экологической безопасности;
-                </li>
-                <li>
-                  разрабатывать
-                  и выполнять планы по улучшению условий труда, санитарно-бытовых
-                  условий, обеспечения промышленной и экологической безопасности;
-                </li>
-                <li>
-                  совершенствовать технологические процессы и оборудование для
-                  снижения производственных рисков, а также воздействия на
-                  окружающую среду;
-                </li>
-                <li>
-                  эффективно мотивировать наших сотрудников к
-                  безопасному поведению, безопасной работе и ведению здорового
-                  образа жизни;
-                </li>
-                <li>
-                  обеспечивать готовность персонала к действиям по
-                  локализации аварийных ситуаций.
-                </li>
-              </ul>
-              <p>
-                Мы ожидаем от всех наших сотрудников:
-              </p>
-              <ul class='block-text__list'>
-                <li>
-                  безопасного поведения на территории предприятия;
-                </li>
-                <li>
-                  поддержания безопасности на своих рабочих местах и сохранности
-                  окружающей среды;
-                </li>
-                <li>
-                  активного участия в оценке рисков и реализации
-                  мероприятий по их устранению;
-                </li>
-                <li>
-                  немедленного информирования
-                  руководства обо всех происшествиях на производстве.»
-                </li>
-              </ul>
+            </p>
+
+            <p>
+              «Мы считаем, что безопасный труд, безаварийное производство,
+              сохранность окружающей среды и рациональное использование
+              природных ресурсов является основой успехов в бизнесе.
+            </p>
+            <p>Наша цель - работа без происшествий:</p>
+            <p>
+              Мы стремимся исключить любые происшествия, способные нанести вред
+              здоровью людей, производству или окружающей среде.
+            </p>
+            <p>Мы принимаем на себя обязательства:</p>
+            <ul class="block-text__list">
+              <li>
+                соблюдать все применимые к нашей деятельности требования
+                законодательства и бизнес-сообщества;
+              </li>
+              <li>
+                развивать и эффективно применять системы управления в области
+                охраны труда, промышленной и экологической безопасности;
+              </li>
+              <li>
+                не допускать опасные действия персонала и создания опасных
+                условий при выполнении любой работы;
+              </li>
+              <li>предотвращать загрязнение окружающей среды;</li>
+              <li>
+                обучать наших сотрудников безопасной и безаварийной работе,
+                обеспечивать их эффективными средствами индивидуальной и
+                коллективной защиты.
+              </li>
+            </ul>
+            <p>Постоянные улучшения:</p>
+            <p>
+              Все наши руководители ответственны за постоянные улучшения в
+              области охраны труда, промышленной и экологической безопасности
+              при осуществлении ими производственной деятельности.
+            </p>
+            <p>Мы принимаем на себя обязательства:</p>
+            <ul class="block-text__list">
+              <li>
+                совершенствовать управление в области охраны труда, промышленной
+                и экологической безопасности;
+              </li>
+              <li>
+                разрабатывать и выполнять планы по улучшению условий труда,
+                санитарно-бытовых условий, обеспечения промышленной и
+                экологической безопасности;
+              </li>
+              <li>
+                совершенствовать технологические процессы и оборудование для
+                снижения производственных рисков, а также воздействия на
+                окружающую среду;
+              </li>
+              <li>
+                эффективно мотивировать наших сотрудников к безопасному
+                поведению, безопасной работе и ведению здорового образа жизни;
+              </li>
+              <li>
+                обеспечивать готовность персонала к действиям по локализации
+                аварийных ситуаций.
+              </li>
+            </ul>
+            <p>Мы ожидаем от всех наших сотрудников:</p>
+            <ul class="block-text__list">
+              <li>безопасного поведения на территории предприятия;</li>
+              <li>
+                поддержания безопасности на своих рабочих местах и сохранности
+                окружающей среды;
+              </li>
+              <li>
+                активного участия в оценке рисков и реализации мероприятий по их
+                устранению;
+              </li>
+              <li>
+                немедленного информирования руководства обо всех происшествиях
+                на производстве.»
+              </li>
+            </ul>
           </div>
         </div>
 
@@ -745,44 +739,45 @@
           <div class="block_header">
             Экологическая политика<span>оборудование</span>
           </div>
-          <div class="block-text__inner">
+          <div class="block-text__inner p--right">
             <p>
               К числу главных целей и задач ООО «НПО Лаборатория специальных
               сталей и сплавов» в области экологии отнесены:
             </p>
-            <ul class='block-text__list'>
+            <ul class="block-text__list">
               <li>
-                управление
-                ресурсами с учетом рисков в области охраны труда и экологии;
+                управление ресурсами с учетом рисков в области охраны труда и
+                экологии;
               </li>
               <li>
-                последовательное, независимо от динамики производства, сокращение
-                количества выбросов, сбросов загрязняющих веществ и отходов, их
-                токсичности за счет использования природоохранных технологий,
-                оборудования и методов управления, раздельный сбор отходов для
-                дальнейшего вторичного использования;
+                последовательное, независимо от динамики производства,
+                сокращение количества выбросов, сбросов загрязняющих веществ и
+                отходов, их токсичности за счет использования природоохранных
+                технологий, оборудования и методов управления, раздельный сбор
+                отходов для дальнейшего вторичного использования;
               </li>
               <li>
-                постоянное повышение
-                квалификации работников в области охраны труда и экологии;
+                постоянное повышение квалификации работников в области охраны
+                труда и экологии;
               </li>
               <li>
                 обеспечение готовности персонала к действиям по локализации
                 аварийных ситуаций;
               </li>
               <li>
-                привлечение работников к активному участию в
-                создании и обеспечении здоровых и безопасных условий труда,
+                привлечение работников к активному участию в создании и
+                обеспечении здоровых и безопасных условий труда,
                 ресурсосбережении и природоохранных мероприятиях путем
-                соответствующих мер мотивации и развития социального партнерства.
+                соответствующих мер мотивации и развития социального
+                партнерства.
               </li>
             </ul>
-             <p>
+            <p>
               Для решения поставленных задач ООО «НПО Лаборатория специальных
               сталей и сплавов» последовательно проводит комплекс мероприятий, в
               том числе:
-             </p>
-             <ul class='block-text__list'>
+            </p>
+            <ul class="block-text__list">
               <li>
                 ведется постоянный мониторинг состояния экологической
                 безопасности предприятия. Определена санитарно-защитная зона
@@ -792,18 +787,17 @@
                 допустимым нормам;
               </li>
               <li>
-                организованы контроль за содержанием
-                временных мест накопления отходов и учет отходов. Отходы
-                еженедельно вывозятся и передаются лицензированным организациям
-                или на вторичное использование;
+                организованы контроль за содержанием временных мест накопления
+                отходов и учет отходов. Отходы еженедельно вывозятся и
+                передаются лицензированным организациям или на вторичное
+                использование;
               </li>
               <li>
-                осуществляется систематическая
-                уборка территории предприятия с тем, чтобы минимизировать
-                попадание загрязняющих веществ в канализационные сети ГК
-                «Кировский завод».
+                осуществляется систематическая уборка территории предприятия с
+                тем, чтобы минимизировать попадание загрязняющих веществ в
+                канализационные сети ГК «Кировский завод».
               </li>
-             </ul>
+            </ul>
           </div>
         </div>
 
@@ -814,5 +808,38 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__inner">
+          <div class="contact-us__inner">
+            <div class="contact-us__title">Связь с нами:</div>
+            <ul class="contact-us__list">
+              <li class="contact-us__item">
+                <div class="contact-us__item-title">Телефон:</div>
+                <div class="contact-us__item-content">+7(812) 702-04-66</div>
+              </li>
+              <li class="contact-us__item">
+                <div class="contact-us__item-title">Почтовый адрес:</div>
+                <div class="contact-us__item-content">info@lsss.kzgroup.ru</div>
+              </li>
+            </ul>
+          </div>
+          <div class="requisites__inner">
+            <ul class="requisites__list">
+              <li class="requisites__item">
+                <img class="requisites__item-img" src="img/arrow_in_squ.svg" alt="">
+                <div class="requisites__item-content">Реквизиты компании</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__end">
+          ©️ Общество с ограниченной ответственностью «НПО Лаборатория
+          специальных сталей и сплавов»
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
